--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -4,19 +4,31 @@
   background-size: cover;
   background-position: center;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  font-size: 22px;
-  color: white;
+  font-size: 40px;
   font-weight: bolder;
-  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  text-shadow: 1px 0 black, -1px 0 black, 0 1px black, 0 -1px black,
+             1px 1px black, -1px -1px black, 1px -1px black, -1px 1px black;
+  opacity: 0.9;
+  color: white;
   align-items: center;
-  justify-content:center;
-  // justify-content: space-around;
+  justify-content: space-around;
   padding-top: 135px;
-  font-size: 36px;
+  transition-duration: 0.5s;
+  // mix-blend-mode: difference;
+  // background-blend-mode: overlay;
+  // opacity: 60%;
   // margin-block-start: 0.67em;
   // margin-block-end: 0.67em;
   // margin-inline-start: 0px;
   // margin-inline-end: 0px;
   // margin-right:auto;
   // margin-left: auto;
+}
+
+.btn-carousel {
+  color: black;
+  font-size: 40px;
+  font-weight: bolder;
+  text-shadow: none;
+  opacity: 1;
 }
