--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,7 +3,7 @@
  <%= render 'shared/nav_dashboard' %>
 
 
-  <div class=" flex-grow-1" style='height: 650px'>
+  <div class=" flex-grow-1" style='height: 650px margin-bottom:120px;'>
     <h2 class="text-center">Vos commandes fournisseurs en cours</h2>
     <% @orders.each do |order| %>
       <% if order.client.nil? %>
