--- a/app/views/shared/_order_status.html.erb
+++ b/app/views/shared/_order_status.html.erb
@@ -3,7 +3,7 @@
   <div class="d-flex justify-content-around align-items-center">
     <p><i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 20px"></i> Attente de validation</p>
     <%= link_to validate_path(order, order: {status: 1}), method: :patch, class: 'btn btn-outline-dark text-center text-decoration-none' do %>
-       <span> Valider la commande </span><i class="fa-solid fa-check" style='font-size: 20px;'></i>
+       <span> Valider la commande </span> <i class="fa-solid fa-cart-shopping" style='font-size: 20px'></i>
     <% end %>
   </div>
   <% elsif order.status == 1%>
