--- a/app/views/shared/_card_order.html.erb
+++ b/app/views/shared/_card_order.html.erb
@@ -17,7 +17,7 @@
           <% end %>
 
           <div style='font-size: 12px; color:black;'>
-            <i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 12px"></i><span> Attente de validation</span>
+            <i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 12px"></i><span> En attente de validation</span>
           </div>
 
       <% elsif order.status == 1%>
