--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -19,7 +19,7 @@
       <% end %>
 
       <% if @missing_products.count == 0 %>
-        <h3 class='text-center'>Aucun produit à commander</h3>
+        <h3 class='text-center'>Bravo ! Aucune rupture à l'horizon !</h3>
         <div class="text-center mt-5">
           <%= link_to "Commandes fournisseur", orders_path, class: 'btn btn-dark'  %>
         </div>
