--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,8 @@
   <div class="collapse navbar-collapse " id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto align-items-center me-2">
       <% if user_signed_in? %>
-        <li class="nav-item active nav-width">
-          <%= link_to "Tableau de bord", "/orders", class: "nav-link" %>
+        <%# <li class="nav-item active nav-width">
+          <%= link_to "Tableau de bord", "/orders", class: "nav-link"
         </li>
         <%# <li class="nav-item">
           <%= link_to "Messages", "#", class: "nav-link"
@@ -21,7 +21,7 @@
           <%= link_to current_user.first_name, "#", class: "text-decoration-none dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <%= link_to "Mon Profil", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
+            <%# <%= link_to "Another action", "#", class: "dropdown-item" %>
             <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
