--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,27 +11,27 @@
       Livrez 100% de vos clients...
       <br>
       <% if user_signed_in? %>
-        <%= link_to "Je veux une démo !", dashboard_path, class: "btn btn-danger demo-btn btn-carousel"  %>
+        <%= link_to "Je traite mes ruptures de stock!", dashboard_path, class: "btn btn-danger demo-btn btn-carousel"  %>
       <% else %>
-        <%= link_to "Je veux une démo !", new_user_session_path, class: "btn btn-danger demo-btn btn-carousel"  %>
+        <%= link_to "Je traite mes ruptures de stock!", new_user_session_path, class: "btn btn-danger demo-btn btn-carousel"  %>
       <% end %>
     </div>
     <div class="carousel-item text-center" style="background-image: url(https://images.unsplash.com/photo-1622030411594-c282a63aa1bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)">
       ...en anticipant vos commandes fournisseurs...
      <br>
       <% if user_signed_in? %>
-        <%= link_to "Je veux une démo !", dashboard_path, class: "btn btn-danger demo-btn btn-carousel"  %>
+        <%= link_to "Je traite mes ruptures de stock!", dashboard_path, class: "btn btn-danger demo-btn btn-carousel"  %>
       <% else %>
-        <%= link_to "Je veux une démo !", new_user_session_path, class: "btn btn-danger demo-btn btn-carousel"  %>
+        <%= link_to "Je traite mes ruptures de stock!", new_user_session_path, class: "btn btn-danger demo-btn btn-carousel"  %>
       <% end %>
     </div>
     <div class="carousel-item text-center" style="background-image: url(https://images.unsplash.com/photo-1622127739239-1905bbaa21b8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1933&q=80)">
       ... en quelques clics !
      <br>
       <% if user_signed_in? %>
-        <%= link_to "Je veux une démo !", dashboard_path, class: "btn btn-danger demo-btn btn-carousel"  %>
+        <%= link_to "Je traite mes ruptures de stock!", dashboard_path, class: "btn btn-danger demo-btn btn-carousel"  %>
       <% else %>
-        <%= link_to "Je veux une démo !", new_user_session_path, class: "btn btn-danger demo-btn btn-carousel"  %>
+        <%= link_to "Je traite mes ruptures de stock!", new_user_session_path, class: "btn btn-danger demo-btn btn-carousel"  %>
       <% end %>
     </div>
   </div>
@@ -52,13 +52,13 @@
             <div class="row mt48 mb48">
               <div class="col-md-4 mt48 mb48">
                 <i class="fa-solid fa-cubes"></i>
-                <h5>Voyez d'un seul coup d'oeil vos stocks</h5>
-                <p>Grâce à votre tableau de bord, vous pourrez visualiser les produits nécessitant un réapprovisionnement pour honorer votre portefeuille de commandes</p>
+                <h5>Consultez vos stocks en un coup d'oeil</h5>
+                <p>Grâce à votre tableau de bord, vous pouvez visualiser les produits nécessitant un réapprovisionnement pour honorer votre portefeuille de commandes</p>
               </div>
               <div class="col-md-4 mt48 mb48">
                 <i class="fa-solid fa-truck-fast"></i>
                 <h5>Livrez davantage de commandes</h5>
-                <p>Anticiper vos commandes fournisseurs vous permettra d'avoir moins de manquants dans vos commandes clients - et boostera ainsi votre chiffre d'affaire</p>
+                <p>Anticipez vos commandes fournisseurs vous permettra de limiter vos ruptures de stocks - et boostera ainsi votre chiffre d'affaire</p>
               </div>
               <div class="col-md-4 mt48 mb48">
                 <i class="fa-solid fa-arrow-trend-up"></i>
