--- a/app/views/shared/_card_product.html.erb
+++ b/app/views/shared/_card_product.html.erb
@@ -2,7 +2,7 @@
   <%= cl_image_tag product.photo.key, height: 300, width: 400, crop: :fill %>
   <div class="flex-grow-1">
     <div class="card-product-infos text-center">
-      <div style="font-size: 16px text-center">
+      <div style="font-size: 20px">
         <%= product.title %>
         <p style="font-size: 12px"><%= product.supplier.name %></p>
       </div>
