--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,26 +1,28 @@
 .banner {
-  height: 300px;
+  height: 250px;
   display: flex;
   justify-content: space-around;
+  text-align: center;
   align-items: center;
-  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), image-url("background.jpg");
+  background-image: linear-gradient(rgba(90,90,90,0.45), rgba(90,90,90,0.45)), image-url("background.jpg");
   background-size: cover;
   background-position: center;
   h1 {
     color: white;
     font-weight: bold;
     font-size: 45px;
+    text-shadow: 1px 1px 2px black;
   }
   h2 {
     color: white;
     font-size: 35px;
     font-weight: bolder;
+    text-shadow: 1px 1px 2px black;
   }
   p {
     color: white;
     opacity: .8;
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 30px;
   }
 }
