--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  position: fixed-bottom;
+  position:static;
   width: 100%;
   bottom: 0;
   box-sizing: border-box;
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 70px;
+  height: 50px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   z-index: 0;
