--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,7 +7,7 @@
 }
 
 .three-blocks {
-  margin: 20px;
+  margin: 40px;
 }
 
 .demo {
@@ -17,6 +17,8 @@
 
 .demo-btn {
   margin-top: 40px;
-  font-size: 30px;
+  font-size: 28px;
   font-weight: bold;
+  border-radius: 25px;
+  padding: 10px;
 }
