--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm fixed-top navbar-light">
-  <div class="container-fluid">
+  <div class="container-fluid" style= "height: 70px">
     <%= link_to "/", class: "navbar-brand" do %>
-        <i class="fa-solid fa-truck-fast"></i>
+        <img src="/assets/logistip_logo_3.jpg" alt="logistip_logo" id="logo">
     <% end %>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
