--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@
   background: white;
   height: 70px;
   padding: 0px 20px;
+  border-bottom: 1px solid $onyx;
 }
 
 .navbar .navbar-collapse {
@@ -65,4 +66,5 @@
 .navbar .navbar-brand #logo{
   height: 70px;
   width: 104px;
+  padding-bottom: 1px;
 }
