--- a/app/assets/stylesheets/components/_card_order.scss
+++ b/app/assets/stylesheets/components/_card_order.scss
@@ -1,10 +1,10 @@
 .card-order {
   overflow: hidden;
-  height: 180px;
+  // height: 180px;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px #00000033;
   display: flex;
-  align-items: center;
+  // align-items: center;
 }
 
 .card-order img {
@@ -27,6 +27,6 @@
   margin-top: 8px;
 }
 
-.card-order .card-order-infos {
+.card-order-infos {
   padding: 16px;
 }
