--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,11 +5,12 @@
 
     <div class="flex-grow-1 pt-4">
       <div>
+        <h1 class="text-center">Votre commande numéro <%= @order.id %> de chez</h1>
         <div class="d-flex align-items-center">
           <%= link_to orders_path, class: 'text-decoration-none' do %>
             <i class="fa-solid fa-circle-chevron-left" style='font-size: 24px; color:black'></i>
           <% end %>
-          <h1 class="text-center flex-grow-1"><%= @order.order_lines.first.supplier.name %></h1>
+          <h1 class="text-center flex-grow-1">  <%= @order.order_lines.first.supplier.name %></h1>
         </div>
 
         <% @order.order_lines.each do |line| %>
@@ -25,7 +26,7 @@
             <h1 class="text-center" style="font-size : 36px">Vous avez commandé l'intégralité de l'assortiment de ce fournisseur</h1>
           <% else %>
             <h1 class="text-center">Ce fournisseur propose également:</h1>
-            <% @other_products.each do |product| %>
+            <%  @other_products.each do |product| %>
               <%= render partial: 'shared/card_product', locals: {product: product}  %>
             <% end %>
           <% end %>
