--- a/app/views/shared/_nav_dashboard.html.erb
+++ b/app/views/shared/_nav_dashboard.html.erb
@@ -1,7 +1,8 @@
-<nav class="nav nav-pills nav-fill">
+<nav class="nav nav-pills nav-fill"  data-controller="active-class">
+  <div data-dash="<%=dashboard_url%>" data-index="<%=orders_url%>" data-active-class-target="url"></div>
     <div class="dash-button">
-      <button type="button" class="btn btn-dark position-relative" id="dashbutton">
-        <a class="nav-link-dash" aria-current="page" href="<%= dashboard_path %>" style="text-decoration:none" >
+      <button type="button" class=" btn btn-dark position-relative" id="dashbutton" data-active-class-target="produits" href="<%= dashboard_path %>">
+        <a class="nav-link-dash" aria-current="page" href="<%= dashboard_path %>" style="text-decoration:none">
           Produits en rupture
             <% if @missing_products.count.zero? %>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success">
@@ -16,18 +17,8 @@
       </button>
     </div>
     <div class="dash-button">
-      <button type="button" class="btn btn-dark position-relative" id="dashbutton">
-        <a class="nav-link-dash" href="" style="text-decoration:none" >
-          Commandes Clients
-          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success">
-            0
-          </span>
-        </a>
-      </button>
-    </div>
-    <div class="dash-button">
-      <button type="button" class="btn btn-dark position-relative" id="dashbutton">
-        <a class="nav-link-dash" href="<%= orders_path %>" style="text-decoration:none" >
+      <button type="button" class="btn btn-dark position-relative" id="dashbutton" data-active-class-target="fournisseurs" href="<%= orders_path %>">
+        <a class="nav-link-dash" href="<%= orders_path %>" style="text-decoration:none">
           Commandes Fournisseurs
             <% if @supplier_orders.count == 0 %>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success">
@@ -41,4 +32,16 @@
         </a>
       </button>
     </div>
+    <div class="dash-button">
+      <button type="button" class="btn btn-dark position-relative" id="dashbutton" data-active-class-target="clients">
+        <a class="nav-link-dash" href="" style="text-decoration:none" >
+          Commandes Clients
+          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success">
+            0
+          </span>
+        </a>
+      </button>
+    </div>
+
+
 </nav>
