--- a/app/assets/stylesheets/components/_card_order.scss
+++ b/app/assets/stylesheets/components/_card_order.scss
@@ -1,6 +1,6 @@
 .card-order {
   overflow: hidden;
-  // height: 180px;
+  height: 256px;
   background: white;
   box-shadow: 0 0 15px #00000033;
   display: flex;
@@ -30,3 +30,4 @@
 .card-order-infos {
   padding: 16px;
 }
+
