--- a/app/views/shared/_card_order_line.html.erb
+++ b/app/views/shared/_card_order_line.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="me-3 mb-3 align-self-end">
-      <h2><%= line.line_total_price %>€</h2>
+      <h2 style='font-size:24px'><%= line.line_total_price %>€</h2>
     </div>
   </div>
 <% elsif order.status == 1 %>
