--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,7 @@
               <div class="col-md-4 mt48 mb48">
                 <i class="fa-solid fa-truck-fast"></i>
                 <h5>Livrez davantage de commandes</h5>
-                <p>Anticipez vos commandes fournisseurs vous permettra de limiter vos ruptures de stocks - et boostera ainsi votre chiffre d'affaire</p>
+                <p>Anticipez vos commandes fournisseurs vous permettra de limiter vos ruptures de stocks - et boostera ainsi votre chiffre d'affaires</p>
               </div>
               <div class="col-md-4 mt48 mb48">
                 <i class="fa-solid fa-arrow-trend-up"></i>
