--- a/app/views/shared/_card_order.html.erb
+++ b/app/views/shared/_card_order.html.erb
@@ -6,31 +6,37 @@
           <h4><%= order.products.last.supplier.name %> <span style="font-size: 16px; font-weight: thin;">(<%= pluralize(order.order_lines.count ,'ligne')  %>)</span> </h4>
         <% end %>
         <div class="ms-2 mt-2 flex-shrink-1 mb-5">
+        <% if order.status == 0 %>
+          <div style='font-size: 18px; color:black; padding-bottom:8px'>
+          Produits précommandés
+          </div>
+        <% elsif order.status == 1 %>
+          <div style='font-size: 18px; color:black; padding-bottom:8px'>
+            Produits commandés
+          </div>
+        <% end %>
           <% order.order_lines.each do |o| %>
             <%= o.product.title %> - <%= pluralize(o.quantity, 'colis commandé') %> (<%= o.quantity * o.product.quantity_per_case %> UVC) - <%= o.line_total_price %>€</p>
           <% end %>
         </div>
         <% if order.status == 1 %>
-          <h6 class="mt-5 text-center position-absolute bottom-0 start-50 translate-middle-x">Date de reception: <%= order.planned_delivery_date.strftime('%d/%m/%Y') %></h6>
+          <h6 class="mt-5 position-absolute bottom-0 start-50 translate-right-x" style="text-align: end; font-size:20px">Date de reception: <%= order.planned_delivery_date.strftime('%d/%m/%Y') %></h6>
         <% end %>
       </div>
   </div>
       <div class="align-self-baseline me-4">
         <% if order.status == 0%>
-
             <div style='font-size: 12px; color:black;'>
-              <i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 12px"></i><span> En attente de validation</span>
+              <i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 20px"></i><span> En attente de validation</span>
             </div>
 
         <div>
             <%= link_to order_path(order), class: 'text-center text-decoration-none', style: 'color:black; font-size: 12px;' do %>
-              <i class="fa-solid fa-pen-to-square" style='font-size: 12px; color:black;'></i><span> Editer commande </span>
+              <i class="fa-solid fa-pen-to-square" style='font-size: 20px; color:black;'></i><span> Editer commande </span>
             <% end %>
         </div>
-
-
         <% elsif order.status == 1%>
-          <p style="font-size: 12px" class="align-self-end"><i class="fa-sharp fa-solid fa-circle" style="color:Green; font-size: 12px"></i> Validé au fournisseur</p>
+        <p style="font-size: 12px" class="align-self-end"><i class="fa-sharp fa-solid fa-circle" style="color:Green; font-size: 20px"></i> Validé au fournisseur</p>
         <% end %>
       </div>
       <% if order.status == 0 %>
@@ -39,7 +45,6 @@
               <p style="font-size:16px;"><i class="fa-solid fa-cart-shopping" style='font-size: 16px'></i><span> Valider la commande <strong><%= order.total_price %>€</strong></span></p>
             <% end %>
         </div>
-      <% else %>
-        <h4 class="me-3 align-self-end text-end position-absolute bottom-0 end-0"><%= order.total_price %>€</h4>
+
       <% end %>
 </div>
