--- a/app/views/shared/_card_product.html.erb
+++ b/app/views/shared/_card_product.html.erb
@@ -1,5 +1,10 @@
 <div class="card-product my-2 align-items-center">
   <%= cl_image_tag product.photo.key, height: 300, width: 400, crop: :fill %>
+  <div class="ribbon">
+    <div class="txt">
+    En rupture
+    </div>
+  </div>
   <div class="flex-grow-1">
     <div class="card-product-infos text-center">
       <div style="font-size: 20px">
