--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -16,6 +16,7 @@ $success:    $pistachio;
 $info:       $brick-red;
 $danger:     $honey-yellow;
 $warning:    $max-yellow;
+$dark: $parma;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
