--- a/app/views/shared/_card_order.html.erb
+++ b/app/views/shared/_card_order.html.erb
@@ -1,4 +1,4 @@
-<div class="card-order mx-5 my-2 position-relative">
+<div class="card-order my-2 position-relative">
   <%= cl_image_tag order.order_lines.first.product.supplier.photo.key, width: 400, crop: :fill %>
     <div class="card-order-infos  flex-grow-1 position-relative">
       <div>
