--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,10 @@
 
 <div class='dashboard-container'>
 
- <%= render 'shared/nav_dashboard' %>
+<div class="d-flex">
+<div class="border-end" style="height=100%">
+  <%= render 'shared/sidebar' %>
+</div>
 
     <div class="flex-grow-1 pt-4">
       <div>
@@ -34,4 +37,6 @@
       </div>
     </div>
   </div>
+
+</div>
 </div>
