--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer fixed-bottom">
+<div class="footer">
   <div class="footer-links">
     <a href="https://github.com/matthieusp75/logistip"><i class="fab fa-github"></i></a>
     <a href="https://www.instagram.com/lewagonfrance/"><i class="fab fa-instagram"></i></a>
