--- a/app/views/shared/_card_order.html.erb
+++ b/app/views/shared/_card_order.html.erb
@@ -3,13 +3,13 @@
   <% if order.status == 0 %>
     <div class="orange-ribbon">
       <div class="txt">
-        À valider
+        À VALIDER
       </div>
     </div>
   <% elsif order.status == 1 %>
     <div class="green-ribbon">
       <div class="txt">
-        À réceptionner
+        À RECEPTIONNER
       </div>
     </div>
   <% end %>
@@ -40,7 +40,7 @@
       <div class="align-self-baseline me-4">
         <% if order.status == 0%>
             <div style='font-size: 12px; color:black;'>
-              <i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 20px"></i><span> En attente de validation</span>
+              <i class="fa-sharp fa-solid fa-circle" style="color:orange; font-size: 20px"></i><span>En attente de validation</span>
             </div>
 
         <div>
@@ -49,7 +49,7 @@
             <% end %>
         </div>
         <% elsif order.status == 1%>
-        <p style="font-size: 12px" class="align-self-end"><i class="fa-sharp fa-solid fa-circle" style="color:Green; font-size: 20px"></i> Validé au fournisseur</p>
+        <p style="font-size: 12px" class="align-self-end"><i class="fa-sharp fa-solid fa-circle" style="color:Green; font-size: 20px"></i>En cours de route</p>
         <% end %>
       </div>
       <% if order.status == 0 %>
